# rholearn

./: .gitignore  CITATION.cff  MANIFEST.in  README.md  pyproject.toml  setup.py  tox.ini
example/doslearn-aims-tutorial/: README.md
example/doslearn-aims-tutorial/part-1-dft/: README.md  dft-options.yaml  hpc-options.yaml  part-1-dft.ipynb
example/doslearn-aims-tutorial/part-1-dft/.ipynb_checkpoints/: part-1-dft-checkpoint.ipynb
example/doslearn-aims-tutorial/part-1-dft/data/: si_diamond_10.xyz
example/doslearn-aims-tutorial/part-2-ml/: README.md  dft-options.yaml  ml-options.yaml  part-2-ml.ipynb
example/options/: doslearn-dft-options.yaml  doslearn-ml-options.yaml  hpc-options.yaml  ml-options.yaml  rholearn-dft-options.yaml
example/rholearn-aims-tutorial/: README.md
example/rholearn-aims-tutorial/part-1-dft/: README.md  dft-options.yaml  dft_settings.py  hpc-options.yaml  hpc_settings.py  part-1-dft.ipynb
example/rholearn-aims-tutorial/part-1-dft/data/: qm7_128.xyz  qm7_32.xyz
example/rholearn-aims-tutorial/part-2-ml/: README.md  ml-options.yaml  ml_settings.py  net.py  part-2-ml.ipynb
install/: environment.yaml  extra-pip-packages.sh
my_run_dir/: dft-options.yaml
rholearn/: __init__.py  eval.py  hpc.py  loss.py  mask.py  model.py  train.py  train_utils.py
rholearn/aims_interface/: fields.py  hpc.py  io.py  orbitals.py  parser.py  ri_fit.py  ri_rebuild.py  scf.py
rholearn/doslearn/: __init__.py  eval.py  loss.py  model.py  train.py  train_utils.py
rholearn/options/: __init__.py  dft-defaults.yaml  doslearn-dft-defaults.yaml  doslearn-ml-defaults.yaml  ml-defaults.yaml  options.py  rholearn-dft-defaults.yaml  rholearn-ml-defaults.yaml
rholearn/rholearn/: __init__.py  descriptor.py  eval.py  hpc.py  loss.py  mask.py  model.py  pretrainer.py  train.py  train_utils.py
rholearn/settings/: README.md
rholearn/settings/defaults/: dft_defaults.py  ml_defaults.py  net_default.py
rholearn/settings/user/: dft_settings.py  hpc_settings.py  ml_settings.py
rholearn/utils/: __init__.py  _dispatch.py  analysis.py  convert.py  cube.py  geometry.py  hpc.py  io.py  linalg.py  rotations.py  structure_builder.py  system.py  utils.py
tests/rholearn/: loss.py
tests/rholearn/generate_example_data/isolated/: commands.sh  dft-options.yaml  dft_settings.py
tests/rholearn/generate_example_data/isolated/aims_species/edensity/tight/default/: 06_C_default
tests/rholearn/generate_example_data/isolated/data/: isolated.xyz
tests/rholearn/generate_example_data/isolated/data/processed/0/edensity/: basis_set.pickle  calc_info.pickle  df_error.pickle  ri_coeffs.npz  ri_ovlp.npz  ri_projs.npz
tests/rholearn/generate_example_data/isolated/data/raw/0/edensity/: geometry.in
tests/rholearn/generate_example_data/qm7/: commands.sh  dft-options.yaml  dft_settings.py  hpc-options.yaml  hpc_settings.py  ri_rebuild_process.py  ri_rebuild_setup.py
tests/rholearn/generate_example_data/qm7/aims_species/edensity/tight/default/: 01_H_default  07_N_default  08_O_default
tests/rholearn/generate_example_data/qm7/data/: qm7.xyz
tests/rholearn/generate_example_data/qm7/data/processed/0/edensity/: basis_set.pickle  calc_info.pickle  df_error.pickle  ml_coeffs.npz  ri_coeffs.npz  ri_ovlp.npz  ri_projs.npz  squared_error.pt
tests/rholearn/generate_example_data/qm7/data/processed/1/edensity/: calc_info.pickle  df_error.pickle  ml_coeffs.npz  ri_coeffs.npz  ri_projs.npz  squared_error.pt
tests/rholearn/generate_example_data/qm7/data/processed/2/edensity/: calc_info.pickle  df_error.pickle  ml_coeffs.npz  ri_coeffs.npz  ri_projs.npz  squared_error.pt
