[project]
name = "rholearn"
version = "0.1.0"
description = "Metatensor-torch framework for learning electronic densities decomposed on a basis"
authors = [
    {name = "Joseph W. Abbott", email = "joseph.william.abbott@gmail.com"},
    {name = "Guillaume Fraux", email = "luthaf@luthaf.fr"},
]
dependencies = [
    "ase",
    "numpy",
    "pyyaml",
    "py3dmol",
    "tox",

    # Dependencies from the COSMO (+ friends) stack
    "chemfiles",
    "chemiscope",
    "metatensor[torch]",
    "rascaline-torch @ git+https://github.com/luthaf/rascaline@0311925f9aba803a0744a48d448567a9b65316e1#subdirectory=python/rascaline-torch",
    "vesin",

    # Extra dependencies
    "cube_toolz @ git+https://github.com/funkymunkycool/Cube-Toolz",
]
keywords = ["machine learning", "electronic densities"]

[project.urls]
repository = "https://github.com/lab-cosmo/rholearn"
author = "https://github.com/jwa7"

[build-system]
requires = ["rust", "cmake", "setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "rholearn",
    "rholearn.aims_interface",
    "rholearn.options",
    "rholearn.utils",
]
package-data = {"rholearn" = ["rholearn/options/*.yaml"]}
